[metadata]
name = tuwel-scraper
version = file: tuwel-scraper/VERSION
description = scraper for tuwel learning platform of of the TU Wien
long_description_content_type = text/markdown
long_description = file: README.md
licence: MIT
author = Tilman Kerl
author_email = tilmankerl@protonmail.com
keywords = scraper, tuwel, vienna, tu-wien
url = https://github.com/MisterXY89/iliasScraper

[options.entry_points]
console_scripts =
		tuwel-scraper = tuwel-scraper.cli:main

[options]
python_requires = >= 3.9
packages = tuwel-scraper
include_package_data = true
install_requires =
		bs4
		requests
		fleep
		tqdm
		colorama
		keyring
		click
		pretty_errors
